# Loci_macOS

./: CMakeLists.txt  CardListView.qml  DeckTableView.qml  DeckTableView2.qml  TopBar.qml  card_model.cpp  card_model.h  dbmanager.cpp  dbmanager.h  deck.cpp  deck.h  deckedit.qml  deckscreen.qml  homescreen.qml  main.cpp  main.qml  previewscreen.qml  qml.qrc  reviewscreen.qml  tablemodel.cpp  tablemodel.h
